Found more white space on my contact page when minimising window. Solved the problem by giving the css of the body a height of 100%, and when hitting my media breakpoint, changes to 100vh

--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ on the font-size of the root element. I thought this would be the best choice ju
 /*Below is my containers specifically for my contact page*/
 
 .contactbody {
-  height: 100vh;
+  height: 100%;
 }
 
 .ccontainer {
@@ -431,6 +431,9 @@ on the font-size of the root element. I thought this would be the best choice ju
   }
   .email h1 {
     font-size: 20px;
+  }
+  .contactbody {
+    height: 100vh;
   }
 }
 
